# village

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PKGBUILD  PRD.md  PR_DRAFT.md  README.md  RELEASE_NOTES.md  ROADMAP.md  THINK_TOOL_TEST_RESULTS.md  coverage.json  pyproject.toml  pytest.ini  village-completion.bash  village.1.md
.beads/: .gitignore  issues.jsonl  issues.jsonl.bak  issues.jsonl.filtered  metadata.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.village/: tmux.conf
docs/: ACP_API_REFERENCE.md  ACP_CONFIGURATION.md  ACP_EXAMPLES.md  ACP_INTEGRATION.md  ACP_INTEGRATION_TASKS.md  CHANGELOG.md  EXTENSIBILITY.md  EXTENSIBILITY_API.md  EXTENSIBILITY_GUIDE.md  IMPLEMENTATION_PRD.md  PRD.md  PROPOSALS.md  QUICKSTART.md  ROADMAP.md  SHELL_COMPLETION.md  VILLAGE_PRD_v1.1.md  VILLAGE_PRD_v2_DRAFT.md  ci-enforcement-template.md  execution-engine.md
personas/: pragmatist.md  skeptic.md
profiles/: village-chat.yml  village-create.yml  village-elder.yml  village-keeper.yml  village-onboard.yml  village-scribe.yml
prompts/: base.md
scripts/: test_acp_client.py  test_acp_e2e.py  test_acp_new.py  test_model.py
specs/: 001-implicit-pr-stacking.md  002-chat-transport-abstraction.md  003-unified-transport-architecture.md
tests/: COVERAGE_REPORT.md  MOCK_AUDIT.md  __init__.py  conftest.py  manual_think_tool_test.py  test_acp_bridge.py  test_acp_client.py  test_acp_e2e.py  test_acp_integration.py  test_acp_permissions.py  test_acp_server.py  test_agent_command.py  test_agent_events.py  test_agents.py  test_ci.py  (+83 more)
(+387 files in other folders)
