[project]
name = "village"
version = "0.4.0"
description = "CLI-native parallel development orchestrator"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.76.0",
    "click>=8.1.0",
    "httpx>=0.28.1",
]

[project.scripts]
village = "village.cli:village"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow re-exports

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.14",
    "types-requests>=2.32.4.20260107",
]
